# tasks

./: CMakeLists.txt  README.md  weird-algorithm
book-examples/: main  weird-algorithm.cpp
codeforces/: watermelon.cpp
jere/: geometria.cpp
